# ProxyDllGenerator

./: .editorconfig  MFSX.ProxyDllGenerator.sln  README.md
MFSX.ProxyDllGenerator/: FodyWeavers.xml  MFSX.ProxyDllGenerator.csproj  Program.cs
MFSX.ProxyDllGenerator/Properties/: Resources.Designer.cs  Resources.resx
MFSX.ProxyDllGenerator/Resources/: CMakeLists.txt  Logger.h  SlnFile.sln  Template.cpp  VcxprojFile.vcxproj
